Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -238,7 +238,7 @@
    ],
    "source": [
     "city_names = []\n",
-    "for city in cities['City ']:\n",
+    "for city in citiy_indices:\n",
     "    city_names.append[city]\n",
     "\n",
     "city_names"
