--- a/index.ipynb
+++ b/index.ipynb
@@ -265,13 +265,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 \n",
+      "2 \n",
+      "3 \n",
+      "4 \n",
+      "5 \n",
+      "6 \n",
+      "7 \n",
+      "8 \n",
+      "9 \n",
+      "10 \n",
+      "11 \n",
+      "12 \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "names_and_ranks = []\n",
-    "    for index in city_indices:\n",
-    "        print(f\"{index}\")\n",
+    "for index in city_indices:\n",
+    "    print(f\"{index + 1}. {c} \")\n",
     "\n",
     "names_and_ranks\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
