--- a/index.ipynb
+++ b/index.ipynb
@@ -265,25 +265,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 \n",
-      "2 \n",
-      "3 \n",
-      "4 \n",
-      "5 \n",
-      "6 \n",
-      "7 \n",
-      "8 \n",
-      "9 \n",
-      "10 \n",
-      "11 \n",
-      "12 \n"
+      "1. Buenos Aires \n",
+      "2. Toronto \n",
+      "3. Pyeongchang \n",
+      "4. Marakesh \n",
+      "5. Albuquerque \n",
+      "6. Los Cabos \n",
+      "7. Greenville \n",
+      "8. Archipelago Sea \n",
+      "9. Walla Walla Valley \n",
+      "10. Salina Island \n",
+      "11. Solta \n",
+      "12. Iguazu Falls \n"
      ]
     },
     {
@@ -292,7 +292,7 @@
        "[]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,7 @@
    "source": [
     "names_and_ranks = []\n",
     "for index in city_indices:\n",
-    "    print(f\"{index + 1}. {c} \")\n",
+    "    print(f\"{index + 1}. {city_names[index]} \")\n",
     "\n",
     "names_and_ranks\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
@@ -308,9 +308,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-25-357458089980>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnames_and_ranks\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# '1. Buenos Aires'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnames_and_ranks\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# '2. Toronto'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnames_and_ranks\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# '12. Iguazu Falls'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
    "source": [
     "print(names_and_ranks[0]) # '1. Buenos Aires'\n",
     "print(names_and_ranks[1]) # '2. Toronto'\n",
