--- a/index.ipynb
+++ b/index.ipynb
@@ -430,7 +430,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_areas = []"
+    "city_areas = []\n",
+    "for area in cities:\n",
+    "    city_areas.app"
    ]
   },
   {
