--- a/index.ipynb
+++ b/index.ipynb
@@ -426,13 +426,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4758, 2731, 3194, 200, 491, 3750, 68, 8300, 33, 27, 59, 672]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "city_areas = []\n",
     "for city in cities:\n",
-    "    city_areas.append(city['Area'])"
+    "    city_areas.append(city['Area'])\n",
+    "\n",
+    "city_areas"
    ]
   },
   {
@@ -473,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
